chore: documentation settings